--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     
     <title> DOM </title>
+    <style>
+        .bg-black{
+            background-color: #222222;
+            color: #ffff;
+        }
+        /* li{
+            background-color: red;
+        } */
+    </style>
 </head>
-<body>
-    <div class="bg- black">  // div ke andar ek class name bg black daale hai
-        <h1 class="heading">DOM learning on chai with code</h1>
+<body class="bg-black">  <!--  body ke andar ek class name bg-black daale hai -->
+    <div>    
+        <h1 id="title" class="heading">DOM learning on chai with code
+            <span style="display: none;">test text</span>
+        </h1>
+
+        <h2>Lorem, ipsum.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur fugiat totam perspiciatis ducimus quaerat, dolorum consectetur minus deserunt nesciunt! Fugiat eos asperiores ratione quod laudantium explicabo officiis repudiandae nisi nobis?</p>
+         <input type="text" class="password">
+         <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+         </ul>
+
     </div>
 </body>
 </html>
